manifests/minio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: minio
  namespace: minio
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "s3.xplaceinmyheart.ru"
        - "s3ui.xplaceinmyheart.ru"
    - port:
        number: 443
        name: http2
        protocol: HTTP2
      hosts:
        - "s3.xplaceinmyheart.ru"
        - "s3ui.xplaceinmyheart.ru"
      tls:
        mode: SIMPLE
        credentialName: xplaceinmyheart-ru-tls
