manifests/minio/vitrual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-s3
  namespace: minio
spec:
  hosts:
    - "s3.xplaceinmyheart.ru"
  gateways:
    - minio
  http:
    - route:
        - destination:
            host: minio
            port:
              number: 9000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-s3ui
  namespace: minio
spec:
  hosts:
    - "s3ui.xplaceinmyheart.ru"
  gateways:
    - minio
  http:
    - match:
        - uri:
            prefix: "/ws/objectManager"
      route:
        - destination:
            host: minio
            port:
              number: 9001
    - route:
        - destination:
            host: minio
            port:
              number: 9001
